[omnibox] Don't indent the text if the location icon text is showing.

The point of the text indent is to align with the suggestions in the
dropdown. But if the location icon has text, it won't align anyway so
the indent is not useful and looks odd.

Bug: 859543

Change-Id: I355c81016a2691bcc237b108eec80318dccf1b50
Reviewed-on: https://chromium-review.googlesource.com/1159229
Reviewed-by: Tommy Li <tommycli@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580571}